welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:24: error: not found: value faire
def ligne() {for(a <- 1 to 9) { faire Motif } ; recule(44)}
                                ^